# pr-review

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pr-review.yml
scripts/: example_api.py  pr_reviewer.py
